Fix font sizes and spacing2

--- a/frontend/assets/scss/components/following-cooks.component.scss
+++ b/frontend/assets/scss/components/following-cooks.component.scss
@@ -8,14 +8,14 @@
     width: 100%;
     height: 90px;
     flex-basis: 100%;
-    padding: $spacingMedium;
+    padding: $spacingLarge;
 
     @media screen and (min-width: $mobileWidth) {
       flex-basis: 50%;
-      max-width: 44%;
+      max-width: 40%;
     }
     @media screen and (min-width: $tabletWidth) {
-      max-width: 415px;
+      max-width: 395px;
     }
     &:hover {
       text-decoration: none;
